fix overflow x for broken devices

--- a/swat team/index.css
+++ b/swat team/index.css
@@ -4,6 +4,10 @@
     width: 0px;
 }
 
+body{
+    overflow-x: hidden;
+}
+
 /*  fix footer  */
 footer {
     background-color: #333; /* Dark background color */
